--- a/ca_site/html/css/index.css
+++ b/ca_site/html/css/index.css
@@ -1,19 +1,8 @@
-h1{
-position: absolute;
-width: 129px;
-height: 96px;
-left:50%;
-top:0;
-margin-left: -65px;
-}
-
-h2{
-	width: 980px;
-	font-size: 24px;
-	font-family: "myriad pro";
-	letter-spacing: 5px;
-	padding-top: 32px;
-	margin-bottom: 24px;
+.wrapper{
+	width: 1170px;
+	margin-top: 0px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 header{
@@ -23,19 +12,21 @@ header{
 	position: relative;
 }
 
-.header_wrapper{
-	width: 1170px;
-	margin-top: 0px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .inner{
 	width: 980px;
-	margin-top: 48px;
+	margin: 48px auto;
 }
 
-.subnav{
+h1/* logo */{
+position: absolute;
+width: 129px;
+height: 96px;
+left:50%;
+top:0;
+margin-left: -65px;
+}
+
+.subnav/* 言語と検索バー */{
 	width: 260px;
 	float: right;
 	overflow: hidden;
@@ -73,7 +64,7 @@ header{
 	border-right: 2px solid #aaa;
 }
 
-.searchform{
+.searchform/* 検索バー */{
 	overflow: hidden;
 	width: 190px;
 	float: right;
@@ -82,24 +73,25 @@ header{
 .keywords{
 	width: 162px;
 	height: 24px;
-	border-radius: 4px;
+	border-radius: 4px 0px 0px 4px;
 	background: #eee;
 	border: none;
 	color: #000;
 	float:left;
 	padding: 0;
 }
-#search01 {
+
+#search01{
 	top: 0;
 	left: 162px;
 	float:right;
 }
 
-
+/* ↓グローバルナビ */
 nav{
 	width: 100%;
 	clear:right;
-
+	border-bottom: 4px solid #e5e5e5;
 }
 
 nav ul{
@@ -118,8 +110,9 @@ nav ul li a{
 	height: 180px;
 	text-decoration:none;
 }
+/* ↑グローバルナビ */
 
-
+/* ↓○○したい！ */
 .want{
 	clear:right;
 	background-image: url(../img/town.png);
@@ -283,8 +276,9 @@ a:hover.want7{
   text-indent:-10000px;
   list-style:none;
 }
+/* ↓○○したい！ */
 
-
+/* ↓オススメとニュース */
 .contents_wrapper{
 	width: 980px;
 	margin: 0 auto;
@@ -296,12 +290,20 @@ a:hover.want7{
 	margin: 32px auto;
 }
 
+
+/* オススメ */
 .pickup{
 	text-align: center;
 }
 
-.pickup h2{
-	 text-align: left;
+.pickup h2,.news h2{
+	width: 980px;
+	font-size: 24px;
+	font-family: "myriad pro";
+	letter-spacing: 5px;
+	padding-top: 32px;
+	margin-bottom: 24px;
+	text-align: left;
 }
 
 .pickup a img{
@@ -321,7 +323,6 @@ a:hover.want7{
 
 .link ul li{
 	float:left;
-	margin-bottom: 24px;
 	margin-right: 16px;
 }
 
@@ -333,7 +334,6 @@ a:hover.want7{
 	height: 180px;
 	text-decoration:none;
 }
-
 
 a:link.link1{
   display:block;
@@ -437,7 +437,11 @@ a:hover.link6{
   list-style:none;
 }
 
+hr{
+	margin: 0;
+}
 
+/* ニュース */
 .news{
 	width: 980px;
 	font-size:14px;
@@ -495,9 +499,10 @@ a:hover.link6{
 
 .news .more_btn{
   text-align: center;
-/*   margin: 24px auto; */
 }
+/* ↑オススメとニュース */
 
+/* ↓フッター */
 footer{
 	width: 100%;
 	height: 100px;
@@ -506,12 +511,6 @@ footer{
 	font-size: 13px;
 	font-family:"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro";
 	clear:left;
-}
-
-footer a{
-	color: #fff;
-	text-decoration: none;
-	display:block;
 }
 
 .footerinner{
@@ -524,12 +523,11 @@ footer a{
 	float:left;
 }
 
-.footer-logo {
-	float: right;
-	width: 183px;
-	margin-top: 32px;
+footer a{
+	color: #fff;
+	text-decoration: none;
+	display:block;
 }
-
 
 footer ul li{
 	float:left;
@@ -547,4 +545,10 @@ footer ul li a{
 	clear:both;
 	border-top: 1px solid #d6d6d6;
 	padding-top: 18px;
+}
+
+.footer-logo {
+	float: right;
+	width: 183px;
+	margin-top: 32px;
 }
